--- a/src/styles/css/components/atoms/button/Search.css
+++ b/src/styles/css/components/atoms/button/Search.css
@@ -18,6 +18,7 @@ input[type="text"] {
   outline: none;
   color: #393939;
   padding: 4px;
+  padding-left: 12px;
   padding-right: 60px;
   width: 0px;
   position: absolute;
@@ -39,6 +40,34 @@ input[type="text"]:focus {
   border-bottom: 1px solid #BBB;
   cursor: text;
 }
+/* PC , 테블릿 가로 (해상도 768px ~ 1023px)*/ 
+@media all and (min-width:768px) and (max-width:1023px) { 
+  input[type="text"]:focus {
+    width: 400px;
+  }
+} 
+
+/* 테블릿 세로 (해상도 768px ~ 1023px)*/ 
+@media all and (min-width:768px) and (max-width:1023px) { 
+  input[type="text"]:focus {
+    width: 400px;
+  }
+} 
+
+/* 모바일 가로, 테블릿 세로 (해상도 480px ~ 767px)*/ 
+@media all and (min-width:480px) and (max-width:767px) {
+  input[type="text"]:focus {
+    width: 320px;
+  }
+} 
+
+/* 모바일 가로, 테블릿 세로 (해상도 ~ 479px)*/ 
+@media all and (max-width:479px) {
+  input[type="text"]:focus {
+    display: none;
+  }
+}
+
 input[type="submit"] {
   height: 60px;
   width: 60px;
